# QML-Rex

./: CMakeLists.txt  QML-Rex  QML-Rex.pro  README.md  main.qml  moc_predefs.h  qml.qrc
Docs/: timeline.md
qml/: main.qml
qml/Components/: Bird.qml  Cactus.qml  Cloud.qml  GameInfo.qml  Rex.qml  Roof.qml
src/: BackEnd.cpp  BackEnd.hpp  backend.cpp  backend.h  main.cpp
